--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2513,6 +2513,9 @@ a.back-to-top:hover, a.back-to-top:focus {
 
 /* Fix for very small screens */
 @media (max-width: 400px) {
+  .image-logo{
+    display: none;
+  }
   .carousel-caption {
     top: 35%;
   }
