--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2304,7 +2304,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 15px;
+  gap: 16px;
   padding: 20px;
 }
 
@@ -2315,11 +2315,13 @@ a.back-to-top:hover, a.back-to-top:focus {
   align-items: center;
   background: #f5f5f5;
   color: #333;
-  font-size: 2rem;
+  font-size: 4rem;
   font-weight: bold;
-  width: 100px;
-  height: 100px;
-  border-radius: 10px;
+  font-style: italic;
+  width: 120px;
+  height: 190px;
+  border-radius: 25px;
+  padding: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
 
@@ -2363,7 +2365,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   
   .time-box {
     width: 70px;
-    height: 70px;
+    height: 90px;
     font-size: 1.5rem;
   }
 }
@@ -2401,7 +2403,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   
   .time-box {
     width: 60px;
-    height: 60px;
+    height: 70px;
     font-size: 1.3rem;
   }
   
@@ -2435,7 +2437,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   
   .time-box {
     width: 50px;
-    height: 50px;
+    height: 60px;
     font-size: 1.1rem;
   }
   
@@ -2469,7 +2471,7 @@ a.back-to-top:hover, a.back-to-top:focus {
   
   .time-box {
     width: 45px;
-    height: 45px;
+    height: 55px;
     font-size: 1rem;
   }
 }
@@ -2503,7 +2505,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 
 #count {
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   background: linear-gradient(135deg, pink 30%, rgb(98, 98, 224) 40%, orange 100%);
   background-size: 200% 200%;
   animation: waveAnimation 6s infinite linear;
@@ -2536,3 +2538,6 @@ a.back-to-top:hover, a.back-to-top:focus {
   50% { opacity: 1; transform: translateX(10px) translateY(10px); }
 }
 
+.image-logo{
+  width:100px;
+}
